package edu.fiuba.algo3.modelo.calle;

import edu.fiuba.algo3.modelo.jugador.Jugador;
import edu.fiuba.algo3.modelo.celda.Celda;

public class Calle {
    
    public Calle(Integer f, Integer c) {}

    public void cruzarCon(Jugador jug) {}

    public Celda siguienteEsquina(Celda inicio) {
        return null;
    }

    public boolean contiene(Celda celda) {
        return false;
    }
    
}
